version/0.28/_sources/api/solver/_autosummary/settings/latent_heat_1.rst.txt
:orphan:

.. _latent_heat_1:

latent_heat
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.latent_heat_1
    :show-inheritance:

.. rubric:: Attributes

====================================================   ===========================================

Attribute                                                                                  Summary

====================================================   ===========================================
:ref:`option <option_26>`                                         Select material property method.

:ref:`value <value_15>`                                           Specify constant property value.

:ref:`user_defined_function <user_defined_function>`       Specify user-defined property function.

====================================================   ===========================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_species_child <particle_species_child>`                'child_object_type' of particle_species.

:ref:`material_4_child <material_4_child>`                                    'child_object_type' of material.

============================================================   ===============================================

